# beisen-rs

./: .gitignore  Cargo.toml  readme.md
examples/: contract.rs  email_update.rs  employee.rs  job_position.rs  job_post.rs  organization.rs  setting.rs  token.rs
src/: client.rs  err.rs  impl_contract.rs  impl_employee.rs  impl_job_position.rs  impl_job_post.rs  impl_organization.rs  impl_setting.rs  impl_token.rs  interface.rs  lib.rs
src/dto/: employee.rs  mod.rs  setting.rs  time_window_option.rs
src/model/: contract.rs  employee.rs  job_post.rs  mod.rs  organization.rs  response.rs  setting.rs  token.rs
src/utils/: http.rs  mod.rs
src/utils/datetime/: date_format.rs  mod.rs
src/utils/serde/: mod.rs
