[package]
name = "beisen"
version = "0.1.0"
edition = "2021"
description = "北森系統rust版本sdk"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shenshouer/beisen-rs"
keywords = ["beisen"]

[dependencies]
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"]}
lazy_static = "1.4"
async-recursion = "1.0"

[dev-dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
tracing-subscriber = "0.3.11"
